src/app/app.component.scss
.gradient-background {
    z-index: -1;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(330deg, #fff7de, #e3fde8, #fff7de, #d5f0f8);
    background-size: 350% 350%;

    -webkit-animation: backgroundAnimation 45s ease infinite;
    -moz-animation: backgroundAnimation 45s ease infinite;
    animation: backgroundAnimation 45s ease infinite;
}

@-webkit-keyframes backgroundAnimation {
    0%{background-position:0% 15%}
    50%{background-position:100% 86%}
    100%{background-position:0% 15%}
}
@-moz-keyframes backgroundAnimation {
    0%{background-position:0% 15%}
    50%{background-position:100% 86%}
    100%{background-position:0% 15%}
}
@keyframes backgroundAnimation {
    0%{background-position:0% 15%}
    50%{background-position:100% 86%}
    100%{background-position:0% 15%}
}

.links {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
}

.link {
    font-weight: bold;
    transition: letter-spacing 0.3s ease;
}

.link:hover {
    letter-spacing: 10px;
}

.pop-out-card {
    border-radius: 20px;
    transition: transform 0.3s, box-shadow 0.3s;
}

.section-margin {
    margin-bottom: 70px;
}

.about-skill-mb {
    margin-bottom: 50px;
}

.item-mb {
    margin-bottom: 20px;
}

@mixin pop-out-raised {
    background: rgba(255, 255, 255, 0.3);
    transform: translateY(-5px);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.pop-out-card:hover {
    @include pop-out-raised;
}

.svg-icon-pop {
    transition: all 0.3s;
    transform-origin: 50% 50%;
}

.svg-icon-pop:hover {
    transform: scale(1.2);
}

.pointer-effect {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

.main-flow {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: stretch;
    padding: 0px 90px;
}

.content-column {
    padding: 90px 0px;
    width: 50%;
}

.header {
    padding: 90px 0px;
    text-align: center;
    position: sticky;
    top: 0px;
    max-height: 100vh;
    box-sizing: border-box;
}

.education-card {
    width: 48%;
}

.education-card-content {
    height: 100%;
    width: 100%;
}

.contacts {
    display: none;
}



@media screen and (max-width: 1250px) {

    .header {
        padding: 90px 0 0 0;
        position: relative;
    }

    .main-flow {
        flex-direction: column;
        padding: 0px 48px;
    }

    .content-column {
        width: unset;
    }

    .lg-only {
        display: none;
    }

    .pop-out-card {
        @include pop-out-raised;
    }

    .education-card {
        margin-bottom: 20px;
    }
}

@media screen and (max-width: 750px) {

    .main-flow {
        padding: 0px 24px;
    }

    .education-card {
        width: unset;
    }

    .sm-flex-col {
        flex-direction: column;
    }

    .pointer-effect {
        display: none;
    }
}

@page {
    size: A4;
}

@media print {
    body {
        background: white !important;
    }

    nav {
        display: none !important;
    }

    h1, h2 {
        margin: 5px;
    }

    section {
        break-inside: avoid;
        page-break-inside: avoid;
    }

    .header {
        position: relative;
        flex-direction: row;
        justify-content: flex-start;
    }

    .contacts {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
    }

    .gradient-background,
    .pointer-effect {
        display: none !important;
    }

    .main-flow {
        flex-direction: column;
        padding: 0px 48px;
    }

    .content-column {
        padding: 0px 0px;
        width: unset;
    }

    .links {
        margin: 0px;
    }

    .section-margin {
        margin-bottom: 10px !important;
    }

    .about-skill-mb {
        margin-bottom: 20px !important;
    }

    .item-mb {
        padding-bottom: 0px !important;
    }
}

